# gitscope

./: .env.example  .gitignore  .gitscope-identities.example  .gitscope-repositories.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  installation.md  releasing.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.2.1.md  v0.3.0.md
gitscope/: __init__.py  __main__.py  assets.py  cache.py  cli.py  config.py  date_range.py  diagnostics.py  logging.py  repository_scope.py
gitscope/analytics/: __init__.py  commits.py  issues.py  prs.py  repositories.py  reviews.py  timeline.py
gitscope/charts/: __init__.py  activity.py  bundle.py  commits.py  issues.py  languages.py  pull_requests.py  repositories.py  reviews.py  style.py  timeline.py
gitscope/git/: __init__.py  auth.py  clone.py  collection.py  commits.py  identities.py  languages.py  runner.py  stats.py
gitscope/github/: __init__.py  collection.py  commit_presence.py  discovery.py  errors.py  graphql.py  http.py  issues.py  models.py  prs.py  rest.py  reviews.py  service.py
gitscope/models/: __init__.py  commit.py  issue.py  pull_request.py  report.py  repository.py  resume.py  review.py
gitscope/report/: __init__.py  csv.py  export.py  generate.py  html.py  json.py  markdown.py  resume.py
gitscope/templates/: report.html  resume.css  resume.html  resume.js  styles.css  theme.js
scripts/: __init__.py  create_checksums.py  smoke_test_wheel.py  validate_release.py  verify_wheel.py
tests/: __init__.py  test_cache.py  test_cli.py  test_config.py  test_date_range.py  test_diagnostics.py  test_logging.py  test_release_scripts.py  test_repository_scope.py
tests/analytics/: __init__.py  test_commits.py  test_repositories.py  test_summaries.py  test_timeline.py
tests/charts/: __init__.py  test_builders.py  test_bundle.py
tests/fixtures/: minimal-report.json
tests/git/: __init__.py  test_auth.py  test_clone.py  test_collection.py  test_commits.py  test_identities.py  test_languages.py  test_runner.py
tests/github/: __init__.py  test_collection.py  test_commit_presence.py  test_discovery.py  test_graphql.py  test_http.py  test_issues.py  test_prs.py  test_rest.py  test_reviews.py  test_service.py
tests/report/: __init__.py  test_csv.py  test_export.py  test_generate.py  test_html.py  test_json.py  test_markdown.py  test_resume.py
