[project]
name = "gitscope"
version = "0.1.0"
description = "Generate a professional engineering career report from GitHub organizations."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Manvendra Singh" }]
keywords = ["career", "engineering", "git", "github", "portfolio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/CaptainOfFlyingDutchman/gitscope"
Documentation = "https://github.com/CaptainOfFlyingDutchman/gitscope#readme"
Issues = "https://github.com/CaptainOfFlyingDutchman/gitscope/issues"
Source = "https://github.com/CaptainOfFlyingDutchman/gitscope"
Changelog = "https://github.com/CaptainOfFlyingDutchman/gitscope/blob/main/CHANGELOG.md"

[project.scripts]
gitscope = "gitscope.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "respx>=0.22.0",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gitscope"]

[tool.hatch.build.targets.sdist]
include = [
    "/.github",
    "/docs",
    "/gitscope",
    "/scripts",
    "/tests",
    "/.env.example",
    "/.gitscope-identities.example",
    "/.gitscope-repositories.example",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/README.md",
    "/SECURITY.md",
    "/pyproject.toml",
    "/uv.lock",
]
exclude = [
    "/.env",
    "/.gitscope",
    "/.gitscope-identities",
    "/.gitscope-repositories",
    "/career-report",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=gitscope --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["gitscope"]

[[tool.mypy.overrides]]
module = ["plotly", "plotly.*"]
ignore_missing_imports = true
